Updated states, removed full screen state, fixed screen scaling and text positions, remove all objects on restart, restart game without refreshing, some refactoring, added/updated incode TODO's

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/main.css">
   <!-- Phaser library -->
-  <script src="libs/phaser.js"></script>
+  <script src="libs/phaser.min.js"></script>
   <!-- Secondary libraries -->
     <script src="libs/fullscreen.js"></script>
     <script src="libs/swipe.js"></script>
   <!-- Game libraries -->
   <script src="js/states/boot.js"></script>
   <script src="js/states/load.js"></script>
+  <script src="js/states/fullscreen.js"></script>
   <script src="js/states/menu.js"></script>
   <script src="js/states/play.js"></script>
   <script src="js/states/win.js"></script>
   <script src="js/states/game.js"></script>
   
- <!-- TODO: Clean this up! -->
-  <script src="js/game/level.js"></script>
+   <script src="js/game/level.js"></script>
   <script src="js/game/players.js"></script>
   <script src="js/game/movement.js"></script>
   <script src="js/game/osd.js"></script>
